--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -63,7 +63,7 @@ https://cdn.jsdelivr.net/npm/razorpay@2.9.5/dist/razorpay.min.js
     
         <div class="hidden md:flex items-center space-x-6">
           <a href="/home" class="hover:text-red-500 transition-colors">Home</a>
-          <a href="/product" class="hover:text-red-500 transition-colors">Products</a>
+          <a href="/products" class="hover:text-red-500 transition-colors">Products</a>
           <a href="/categories" class="hover:text-red-500 transition-colors">Categories</a>
         </div>
   
