--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -21,7 +21,7 @@
                 <div class="text-2xl font-bold">REVGEAR</div>
                 <div class="flex items-center space-x-6">
                     <a href="/" class="hover:text-red-500 transition-colors">Home</a>
-                    <a href="#" class="hover:text-red-500 transition-colors">About</a>
+                    <a href="/about" class="hover:text-red-500 transition-colors">About</a>
                     <a href="#" class="hover:text-red-500 transition-colors">Contact</a>
                 </div>
             </nav>
