--- a/views/user/orderDetails.ejs
+++ b/views/user/orderDetails.ejs
@@ -162,7 +162,7 @@
                     <div class="space-y-4">
                         <div class="flex justify-between items-center">
                             <span class="text-gray-600">Subtotal</span>
-                            <span class="text-gray-800 font-medium">₹<%= order.totalAmount.toFixed(2) %></span>
+                            <span class="text-gray-800 font-medium">₹<%=( order.totalAmount-100).toFixed(2) %></span>
                         </div>
                         <div class="flex justify-between items-center">
                             <span class="text-gray-600">Shipping</span>
@@ -171,7 +171,7 @@
                         <hr class="border-gray-200">
                         <div class="flex justify-between items-center font-bold">
                             <span class="text-gray-900">Total</span>
-                            <span class="text-blue-600 text-xl">₹<%= (order.totalAmount + (order.shippingCost || 100)).toFixed(2) %></span>
+                            <span class="text-blue-600 text-xl">₹<%= (order.totalAmount).toFixed(2) %></span>
                             
                         
                         </div>
